# AAI_521_Final_Project

./: .gitignore  AAI_521_Final_Project_Combined.ipynb  README.md  app.py  model.py  model_ml.py  pyproject.toml  requirements.txt
archive/: Wael_ASL_Final_Project_AAI_521.ipynb  Wael_American_Sign_Language_Final_Project.ipynb  Wael_Final_team_project_test.ipynb
