[project]
name = "asl-hand-detection"
version = "0.1.0"
description = "AAI-521 Final project:  Hand detection system using Gradio, CNN (tbd) and MediaPipe"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gradio>=4.0.0",
    "mediapipe==0.10.9",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.24.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"