[project]
name = "asl-hand-detection"
version = "0.1.0"
description = "ASL hand detection system using MediaPipe, EfficientNet, and Gradio"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gradio>=4.0.0",
    "mediapipe==0.10.9",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.24.3",
    "tensorflow>=2.13.0",
    "huggingface-hub>=0.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"